# advent2025

./: Cargo.toml
advent2025-bin/: Cargo.toml
advent2025-bin/src/: main.rs
advent2025-lib/: Cargo.toml
advent2025-lib/src/: day00_template.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  lib.rs  parser.rs  test.rs
examples/: day00_template.txt
inputs/: day00.txt
