[package]
name = "advent2025-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
cached = "0.56.0"
log = "0.4.28"
ndarray = "0.17.1"
pathfinding = "4.14.0"
regex = "1.12.2"
serde = "1.0.228"
serde_with = "3.16.1"
strum = "0.27.2"
strum_macros = "0.27.2"

[dev-dependencies]
env_logger = "0.11.8"
test-log = "0.2.19"
